change mobile grid and background color in wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,11 @@ h2 {
 .cbp-item {
   border-radius: 2px;
 }
+.cbp-caption-defaultWrap {
+  background-color: #173250;
+
+
+}
 
 /* responsive DESKTOP*/
 
